@@ -22,6 +22,8 @@ import static org.mockito.Mockito.when;
 import static org.mockito.Mockito.withSettings;
 
 import com.wcc.platform.domain.cms.attributes.ImageType;
+import com.wcc.platform.domain.cms.pages.mentorship.MenteeSection;
+import com.wcc.platform.domain.cms.pages.mentorship.MentorMonthAvailability;
 import com.wcc.platform.domain.exceptions.DuplicatedMemberException;
 import com.wcc.platform.domain.exceptions.MemberNotFoundException;
 import com.wcc.platform.domain.platform.member.Member;
@@ -31,6 +33,7 @@ import com.wcc.platform.domain.platform.mentorship.MentorshipCycle;
 import com.wcc.platform.domain.platform.mentorship.MentorshipType;
 import com.wcc.platform.domain.platform.type.MemberType;
 import com.wcc.platform.repository.MemberProfilePictureRepository;
+import com.wcc.platform.repository.MemberRepository;
 import com.wcc.platform.repository.MentorRepository;
 import java.time.Month;
 import java.time.ZoneId;
@@ -49,6 +52,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 class MentorshipServiceTest {
 
   @Mock private MentorRepository mentorRepository;
+  @Mock private MemberRepository memberRepository;
   @Mock private MemberProfilePictureRepository profilePicRepo;
   private Integer daysOpen = 10;
   private Mentor mentor;
@@ -63,11 +67,11 @@ class MentorshipServiceTest {
   @BeforeEach
   void setUp() {
     MockitoAnnotations.openMocks(this);
-    service = spy(new MentorshipService(mentorRepository, profilePicRepo, daysOpen));
     mentor = createMentorTest();
     mentorDto = createMentorDtoTest(1L, MemberType.DIRECTOR);
     updatedMentor = createUpdatedMentorTest(mentor, mentorDto);
-    service = spy(new MentorshipService(mentorRepository, profilePicRepo, daysOpen));
+    service =
+        spy(new MentorshipService(mentorRepository, memberRepository, profilePicRepo, daysOpen));
   }
 
   @Test
@@ -75,6 +79,8 @@ class MentorshipServiceTest {
     var mentor = mock(Mentor.class);
     when(mentor.getId()).thenReturn(1L);
     when(mentorRepository.findById(1L)).thenReturn(Optional.of(mentor));
+    when(mentor.getEmail()).thenReturn("test@test.com");
+    when(memberRepository.findByEmail("test@test.com")).thenReturn(Optional.empty());
 
     assertThrows(DuplicatedMemberException.class, () -> service.create(mentor));
     verify(mentorRepository, never()).create(any());
@@ -83,7 +89,37 @@ class MentorshipServiceTest {
   @Test
   void whenCreateGivenMentorDoesNotExistThenCreateMentor() {
     var mentor = mock(Mentor.class);
+    var menteeSection = mock(MenteeSection.class);
     when(mentor.getId()).thenReturn(2L);
+    when(mentor.getMenteeSection()).thenReturn(menteeSection);
+    when(mentor.getEmail()).thenReturn("newmentor@test.com");
+    when(memberRepository.findByEmail("newmentor@test.com")).thenReturn(Optional.empty());
+    when(mentorRepository.findById(2L)).thenReturn(Optional.empty());
+    when(mentorRepository.create(mentor)).thenReturn(mentor);
+
+    var result = service.create(mentor);
+
+    assertEquals(mentor, result);
+    verify(memberRepository).findByEmail("newmentor@test.com");
+    verify(mentorRepository).create(mentor);
+  }
+
+  @Test
+  @DisplayName(
+      "Given mentor with long-term mentorship and 2+ hours commitment When creating Then create"
+          + " mentor and return it")
+  void testCreateAvailableLongTermMentor() {
+    var mentor = mock(Mentor.class);
+    var menteeSection = mock(MenteeSection.class);
+    when(mentor.getId()).thenReturn(2L);
+    when(mentor.getMenteeSection()).thenReturn(menteeSection);
+    when(menteeSection.mentorshipType())
+        .thenReturn(List.of(MentorshipType.AD_HOC, MentorshipType.LONG_TERM));
+    when(menteeSection.availability())
+        .thenReturn(
+            List.of(
+                new MentorMonthAvailability(Month.JANUARY, 3),
+                new MentorMonthAvailability(Month.FEBRUARY, 4)));
     when(mentorRepository.findById(2L)).thenReturn(Optional.empty());
     when(mentorRepository.create(mentor)).thenReturn(mentor);
 
@@ -91,6 +127,55 @@ class MentorshipServiceTest {
 
     assertEquals(mentor, result);
     verify(mentorRepository).create(mentor);
+  }
+
+  @Test
+  @DisplayName(
+      "Given mentor with adhoc mentorship and under 2 hours commitment When creating Then create"
+          + " mentor and return it")
+  void testCreateUnavailableAdHocMentor() {
+    var mentor = mock(Mentor.class);
+    var menteeSection = mock(MenteeSection.class);
+    when(mentor.getId()).thenReturn(2L);
+    when(mentor.getMenteeSection()).thenReturn(menteeSection);
+    when(menteeSection.mentorshipType()).thenReturn(List.of(MentorshipType.AD_HOC));
+    when(menteeSection.availability())
+        .thenReturn(
+            List.of(
+                new MentorMonthAvailability(Month.JANUARY, 1),
+                new MentorMonthAvailability(Month.FEBRUARY, 1)));
+    when(mentorRepository.findById(2L)).thenReturn(Optional.empty());
+    when(mentorRepository.create(mentor)).thenReturn(mentor);
+
+    var result = service.create(mentor);
+
+    assertEquals(mentor, result);
+    verify(mentorRepository).create(mentor);
+  }
+
+  @Test
+  @DisplayName(
+      "Given mentor with long-term mentorship and 2+ hours commitment When creating the"
+          + " mentor Then throw IllegalArgumentException")
+  void testCreateUnavailableLongTermMentor() {
+    var mentor = mock(Mentor.class);
+    var menteeSection = mock(MenteeSection.class);
+    when(mentor.getId()).thenReturn(1L);
+    when(mentor.getMenteeSection()).thenReturn(menteeSection);
+    when(menteeSection.mentorshipType())
+        .thenReturn(List.of(MentorshipType.AD_HOC, MentorshipType.LONG_TERM));
+    when(menteeSection.availability())
+        .thenReturn(
+            List.of(
+                new MentorMonthAvailability(Month.JANUARY, 1),
+                new MentorMonthAvailability(Month.FEBRUARY, 2)));
+    when(mentorRepository.findById(1L)).thenReturn(Optional.empty());
+
+    var expectedMsg = "Long-term mentorship requires mentor to commit at least 2 hours per month.";
+    var exception = assertThrows(IllegalArgumentException.class, () -> service.create(mentor));
+
+    assertEquals(expectedMsg, exception.getMessage());
+    verify(mentorRepository, never()).create(any());
   }
 
   @Test
@@ -156,7 +241,8 @@ class MentorshipServiceTest {
   @Test
   void testGetCurrentCycleReturnsAdHocFromMayWithinOpenDays() {
     daysOpen = 7;
-    service = spy(new MentorshipService(mentorRepository, profilePicRepo, daysOpen));
+    service =
+        spy(new MentorshipService(mentorRepository, memberRepository, profilePicRepo, daysOpen));
     var may2 = ZonedDateTime.of(2025, 5, 2, 9, 0, 0, 0, ZoneId.of("Europe/London"));
     doReturn(may2).when(service).nowLondon();
 
@@ -168,7 +254,8 @@ class MentorshipServiceTest {
   @Test
   void testGetCurrentCycleReturnsClosedOutsideWindows() {
     daysOpen = 5;
-    service = spy(new MentorshipService(mentorRepository, profilePicRepo, daysOpen));
+    service =
+        spy(new MentorshipService(mentorRepository, memberRepository, profilePicRepo, daysOpen));
 
     // April -> closed
     var april10 = ZonedDateTime.of(2025, 4, 10, 12, 0, 0, 0, ZoneId.of("Europe/London"));
@@ -231,6 +318,79 @@ class MentorshipServiceTest {
 
   @Test
   @DisplayName(
+      "Given mentor with long-term mentorship and 2+ hours commitment When updating the mentor"
+          + " Then update and return it")
+  void testUpdateLongTermMentorAvailableTwoHours() {
+    final var updatedMentorWithAvailabilities =
+        createUpdatedMentorTest(
+            mentor,
+            mentorDto,
+            List.of(MentorshipType.AD_HOC, MentorshipType.LONG_TERM),
+            List.of(
+                new MentorMonthAvailability(Month.JANUARY, 2),
+                new MentorMonthAvailability(Month.FEBRUARY, 2)));
+    long mentorId = 1L;
+    when(mentorRepository.findById(mentorId)).thenReturn(Optional.of(mentor));
+    when(mentorRepository.update(anyLong(), any())).thenReturn(updatedMentorWithAvailabilities);
+    Member result = service.updateMentor(mentorId, mentorDto);
+
+    assertEquals(updatedMentorWithAvailabilities, result);
+    verify(mentorRepository).findById(mentorId);
+    verify(mentorRepository).update(anyLong(), any());
+  }
+
+  @Test
+  @DisplayName(
+      "Given mentor with adhoc mentorship and under 2 hours commitment When updating the mentor"
+          + " Then update and return it")
+  void testUpdateUnavailableAdHocMentor() {
+    final var updatedMentorWithAvailabilities =
+        createUpdatedMentorTest(
+            mentor,
+            mentorDto,
+            List.of(MentorshipType.AD_HOC),
+            List.of(
+                new MentorMonthAvailability(Month.JANUARY, 1),
+                new MentorMonthAvailability(Month.FEBRUARY, 0)));
+    long mentorId = 1L;
+    when(mentorRepository.findById(mentorId)).thenReturn(Optional.of(mentor));
+    when(mentorRepository.update(anyLong(), any())).thenReturn(updatedMentorWithAvailabilities);
+
+    Member result = service.updateMentor(mentorId, mentorDto);
+
+    assertEquals(updatedMentorWithAvailabilities, result);
+    verify(mentorRepository).findById(mentorId);
+    verify(mentorRepository).update(anyLong(), any());
+  }
+
+  @Test
+  @DisplayName(
+      "Given mentor with long-term mentorship and under 2 hours commitment"
+          + " When updating the mentor Then throw IllegalArgumentException")
+  void testUpdateUnavailableLongTermMentorIllegalArgumentException() {
+    long mentorId = 1L;
+    MentorDto newMentorDto =
+        createMentorDtoTest(
+            1L,
+            MemberType.DIRECTOR,
+            List.of(MentorshipType.AD_HOC, MentorshipType.LONG_TERM),
+            List.of(
+                new MentorMonthAvailability(Month.JANUARY, 2),
+                new MentorMonthAvailability(Month.FEBRUARY, 0)));
+    when(mentorRepository.findById(mentorId)).thenReturn(Optional.of(mentor));
+
+    var expectedMsg = "Long-term mentorship requires mentor to commit at least 2 hours per month.";
+    var exception =
+        assertThrows(
+            IllegalArgumentException.class, () -> service.updateMentor(mentorId, newMentorDto));
+    assertEquals(expectedMsg, exception.getMessage());
+
+    verify(mentorRepository).findById(anyLong());
+    verify(mentorRepository, never()).update(anyLong(), any());
+  }
+
+  @Test
+  @DisplayName(
       "Given mentor with profile picture, when getAllMentors is called, then images list should"
           + " contain profile picture")
   void shouldMergeProfilePictureIntoImagesWhenMentorHasProfilePicture() {
@@ -249,10 +409,10 @@ class MentorshipServiceTest {
     var result = service.getAllMentors();
 
     assertThat(result).hasSize(1);
-    var mentorDto = result.get(0);
+    var mentorDto = result.getFirst();
     assertThat(mentorDto.getImages()).hasSize(1);
-    assertThat(mentorDto.getImages().get(0).path()).isEqualTo(resource.getDriveFileLink());
-    assertThat(mentorDto.getImages().get(0).type()).isEqualTo(ImageType.DESKTOP);
+    assertThat(mentorDto.getImages().getFirst().path()).isEqualTo(resource.getDriveFileLink());
+    assertThat(mentorDto.getImages().getFirst().type()).isEqualTo(ImageType.DESKTOP);
   }
 
   @Test
@@ -272,7 +432,7 @@ class MentorshipServiceTest {
     var result = service.getAllMentors();
 
     assertThat(result).hasSize(1);
-    var mentorDto = result.get(0);
+    var mentorDto = result.getFirst();
     assertThat(mentorDto.getImages()).isNullOrEmpty();
   }
 
@@ -293,7 +453,48 @@ class MentorshipServiceTest {
     var result = service.getAllMentors();
 
     assertThat(result).hasSize(1);
-    var mentorDto = result.get(0);
+    var mentorDto = result.getFirst();
     assertThat(mentorDto.getImages()).isNullOrEmpty();
+  }
+
+  @Test
+  @DisplayName(
+      "Given existing member with email, when creating mentor with same email, then it should use existing member")
+  void shouldUseExistingMemberWhenMentorEmailAlreadyExists() {
+    var mentor = mock(Mentor.class);
+    when(mentor.getEmail()).thenReturn("existing@test.com");
+    when(mentor.getFullName()).thenReturn("Existing Member as Mentor");
+    when(mentor.getPosition()).thenReturn("Software Engineer");
+    when(mentor.getSlackDisplayName()).thenReturn("@existing");
+    when(mentor.getCountry())
+        .thenReturn(mock(com.wcc.platform.domain.cms.attributes.Country.class));
+    when(mentor.getCity()).thenReturn("New York");
+    when(mentor.getCompanyName()).thenReturn("Tech Corp");
+    when(mentor.getImages()).thenReturn(List.of());
+    when(mentor.getNetwork()).thenReturn(List.of());
+    when(mentor.getProfileStatus())
+        .thenReturn(com.wcc.platform.domain.platform.member.ProfileStatus.ACTIVE);
+    when(mentor.getSkills())
+        .thenReturn(mock(com.wcc.platform.domain.platform.mentorship.Skills.class));
+    when(mentor.getSpokenLanguages()).thenReturn(List.of("English"));
+    when(mentor.getBio()).thenReturn("Bio");
+    when(mentor.getMenteeSection())
+        .thenReturn(mock(com.wcc.platform.domain.cms.pages.mentorship.MenteeSection.class));
+    when(mentor.getFeedbackSection()).thenReturn(null);
+    when(mentor.getResources()).thenReturn(null);
+
+    // Mock existing member with same email
+    Member existingMember = Member.builder().id(999L).email("existing@test.com").build();
+    when(memberRepository.findByEmail("existing@test.com")).thenReturn(Optional.of(existingMember));
+
+    var mentorWithExistingId = mock(Mentor.class);
+    when(mentorWithExistingId.getId()).thenReturn(999L);
+    when(mentorRepository.create(any(Mentor.class))).thenReturn(mentorWithExistingId);
+
+    Mentor result = service.create(mentor);
+
+    assertThat(result.getId()).isEqualTo(999L);
+    verify(memberRepository).findByEmail("existing@test.com");
+    verify(mentorRepository).create(any(Mentor.class));
   }
 }
